--- a/conda_env.yaml
+++ b/conda_env.yaml
@@ -16,8 +16,8 @@ dependencies:
   - bokeh=2.3.3=py38haa244fe_0
   - bottleneck=1.3.2=py38h6f4d8f0_4
   - brotlipy=0.7.0=py38h294d835_1001
-  - ca-certificates=2021.5.30=h5b45459_0
-  - certifi=2021.5.30=py38haa244fe_0
+  - ca-certificates=2022.9.24=h5b45459_0
+  - certifi=2022.9.24=pyhd8ed1ab_0
   - cffi=1.14.6=py38hd8c33c5_1
   - chardet=4.0.0=py38haa244fe_1
   - charset-normalizer=2.0.0=pyhd8ed1ab_0
@@ -103,7 +103,7 @@ dependencies:
   - numpy=1.21.2=py38h089cfbf_0
   - olefile=0.46=pyh9f0ad1d_1
   - openjpeg=2.4.0=hb211442_1
-  - openssl=1.1.1l=h8ffe710_0
+  - openssl=1.1.1q=h8ffe710_0
   - packaging=21.0=pyhd8ed1ab_0
   - pandas=1.3.3=py38h5d928e2_0
   - pandas-profiling=3.0.0=pyhd8ed1ab_0
