--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 __pycache__/
-.vscode/
 .idea/
 .spyproject/
-*.code-workspace
 *.ssmssln
 *.ssmssqlproj
 
@@ -14,6 +12,6 @@ tensorboard/
 temp/
 trash/
 
-vessel_utilize/checks/test.file
-!vessel_utilize/data
-!vessel_utilize/model
+vutilize/checks/test.file
+!vutilize/data
+!vutilize/model
