--- a/conda_env.yaml
+++ b/conda_env.yaml
@@ -3,24 +3,22 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - cloudpickle=2.0.0=pyhd8ed1ab_0
-  - dataprep=0.2.15=pyhd8ed1ab_0
-  - fastapi=0.68.1=pyhd8ed1ab_0
-  - ipykernel=6.4.1=py38h595d716_0
-  - matplotlib=3.4.3=py38haa244fe_0
-  - matplotlib-base=3.4.3=py38h1f000d6_0
-  - nltk=3.6.2=pyhd8ed1ab_0
-  - numpy=1.21.2=py38h089cfbf_0
-  - pandas=1.3.3=py38h5d928e2_0
-  - pandas-profiling=3.0.0=pyhd8ed1ab_0
-  - python=3.8.10=h7840368_2_cpython
-  - scikit-learn=0.24.2=py38h8224a6f_1
-  - scikit-optimize=0.8.1=pyh9f0ad1d_0
-  - scipy=1.6.2=py38he847743_0
-  - seaborn=0.11.2=hd8ed1ab_0
-  - sweetviz=2.1.3=pyhd8ed1ab_0
-  - tqdm=4.62.2=pyhd8ed1ab_0
-  - uvicorn=0.15.0=py38haa244fe_1
+  - dataprep
+  - fastapi
+  - ipykernel
+  - matplotlib
+  - numpy=1.21.2
+  - pandas
+  - pandas-profiling
+  - pip
+  - python
+  - scikit-learn=0.24.2
+  - scikit-optimize=0.8.1
+  - scipy
+  - seaborn
+  - sweetviz
+  - uvicorn
+  - yellowbrick
   - pip:
-    - mlflow==1.20.2
-    - xgboost==1.4.2
+    - mlflow
+    - xgboost
